[package]
name = "sharded-slab"
version = "0.2.0"
authors = ["Eliza Weisman <eliza@buoyant.io>"]
edition = "2024"
documentation = "https://docs.rs/sharded-slab/"
homepage = "https://github.com/hawkw/sharded-slab"
repository = "https://github.com/hawkw/sharded-slab"
readme = "README.md"
rust-version = "1.93.0"
license = "MIT"
keywords = ["slab", "allocator", "lock-free", "atomic"]
categories = ["memory-management", "data-structures", "concurrency"]
description = """
A lock-free concurrent slab.
"""
exclude = [
    "flake.nix",
    "flake.lock",
    ".envrc",
    ".clog.toml",
    ".cargo",
    ".github",
    ".direnv",
    "bin",
]

[badges]
maintenance = { status = "experimental" }

[[bench]]
name = "bench"
harness = false

[dependencies]


[dev-dependencies]
proptest = "1"
criterion = "0.8"
slab = "0.4"
memory-stats = "1"
indexmap = "2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(slab_print)'] }
